--- a/.github/workflows/bulldozer-platform-ci.yaml
+++ b/.github/workflows/bulldozer-platform-ci.yaml
@@ -1,18 +1,14 @@
 name: Bulldozer Platform ci
+on: pull_request
 
-on:
-  push:
-    branches:
-      - master
-  pull_request:
-    branches:
-      - master
+env:
+  SOLANA_VERSION: 1.9.1
+  ANCHOR_VERSION: 0.19.0
+  NODE_VERSION: 14.18.2
 
 jobs:
   ci:
     runs-on: ubuntu-20.04
-    env:
-      BEFORE_SHA: ${{ github.event.before }}
     steps:
       - id: config-repo
         name: Pre config - 🧰 Checkout repo
@@ -21,15 +17,15 @@ jobs:
           fetch-depth: 0
 
       - id: config-node
-        name: Pre config - 🧰 Setting up Node 14.7.5
+        name: Pre config - 🧰 Setting up Node ${{ env.NODE_VERSION }}
         uses: actions/setup-node@v2
         with:
-          node-version: '14.17.5' # we have to check this
+          node-version: ${{ env.NODE_VERSION }}
 
       - id: install-npm-packages
-        name: 📦 Pulling repo and installing Bulldozer Platform npm packages
+        name: 📦 Git fetch for affected commands and installing npm packages
         run: |
-          git fetch --prune origin master
+          git fetch --no-tags --prune --depth=2 origin master
           npm ci
 
       - id: get-affected-projects
@@ -39,8 +35,7 @@ jobs:
         # then using grep, we count (using the -c flag) the occurrences of 'bulldozer-program' string in the above result
         # if we get 0, it means the bulldozer-program does not changed, otherwise it changed and we will install Anchor
         run: |
-          echo "::set-output name=bulldozer-program-affected::$(echo $(npx nx print-affected --select=projects --base=$BEFORE_SHA) | grep -c "bulldozer-programs")"
-
+          echo "::set-output name=bulldozer-program-affected::$(echo $(npx nx print-affected --select=projects --base=origin/master) | grep -c 'bulldozer-programs')"
       - id: install-anchor
         name: 🛠️ Setting up Anchor, Rust, Solana and others related dependencies
         if: steps.get-affected-projects.outputs.bulldozer-program-affected != 0
@@ -49,30 +44,30 @@ jobs:
           curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
           source $HOME/.cargo/env
           rustup component add rustfmt
-
           echo "Installing Solana >> "
-          sh -c "$(curl -sSfL https://release.solana.com/v1.7.11/install)"
+          sh -c "$(curl -sSfL https://release.solana.com/v${{ env.SOLANA_VERSION }}/install)"
           echo "-- adding new solana key file"
           export PATH="$HOME/.local/share/solana/install/active_release/bin:$PATH"
           solana-keygen new -o $HOME/.config/solana/id.json
-
           echo "Installing Serum >> "
-          npm i -g @project-serum/anchor 
-          npm i -g @project-serum/anchor-cli
-
+          npm i -g @project-serum/anchor@${{ env.ANCHOR_VERSION }} 
+          npm i -g @project-serum/anchor-cli@${{ env.ANCHOR_VERSION }}
           echo "Installing others dependencies >>"
           npm i -g typescript
           npm install -g mocha
           npm install -g ts-mocha
-
+      - id: linting-projects
+        name: 🔦 Linting Bulldozer Platform projects
+        run: |
+          export PATH="$HOME/.local/share/solana/install/active_release/bin:$PATH"
+          npx nx affected --target=build --base=origin/master
+      - id: testing-projects
+        name: 🧪 Testing Bulldozer Platform projects
+        run: |
+          export PATH="$HOME/.local/share/solana/install/active_release/bin:$PATH"
+          npx nx affected --target=test --base=origin/master
       - id: building-projects
         name: 🏗️ Building Bulldozer Platform projects
         run: |
           export PATH="$HOME/.local/share/solana/install/active_release/bin:$PATH"
-          npx nx affected --target=build --base=$BEFORE_SHA
-
-      - id: testing-projects
-        name: 🧪 Running Bulldozer Platform projects tests
-        run: |
-          export PATH="$HOME/.local/share/solana/install/active_release/bin:$PATH"
-          npx nx affected --target=test --base=$BEFORE_SHA
+          npx nx affected --target=build --base=origin/master
