--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@angular/router": "13.1.0",
     "@ngrx/component": "13.0.2",
     "@ngrx/component-store": "13.0.2",
-    "@nrwl/angular": "13.3.9",
+    "@nrwl/angular": "13.3.11",
     "@project-serum/anchor": "^0.19.0",
     "@solana/wallet-adapter-base": "^0.8.1",
     "@solana/wallet-adapter-wallets": "^0.13.0",
@@ -49,20 +49,20 @@
     "@commitlint/config-conventional": "^13.2.0",
     "@danmt/nx-anchor": "0.0.6",
     "@ngneat/tailwind": "^7.0.3",
-    "@nrwl/cli": "13.3.9",
-    "@nrwl/cypress": "13.3.9",
-    "@nrwl/eslint-plugin-nx": "13.3.9",
-    "@nrwl/jest": "13.3.9",
-    "@nrwl/linter": "13.3.9",
-    "@nrwl/tao": "13.3.9",
-    "@nrwl/workspace": "13.3.9",
+    "@nrwl/cli": "13.3.11",
+    "@nrwl/cypress": "13.3.11",
+    "@nrwl/eslint-plugin-nx": "13.3.11",
+    "@nrwl/jest": "13.3.11",
+    "@nrwl/linter": "13.3.11",
+    "@nrwl/tao": "13.3.11",
+    "@nrwl/workspace": "13.3.11",
     "@types/chai": "^4.2.21",
     "@types/file-saver": "^2.0.3",
     "@types/jest": "27.0.2",
     "@types/mocha": "^9.0.0",
     "@types/node": "^14.18.1",
-    "@typescript-eslint/eslint-plugin": "5.3.1",
-    "@typescript-eslint/parser": "5.3.1",
+    "@typescript-eslint/eslint-plugin": "^5.8.0",
+    "@typescript-eslint/parser": "^5.8.0",
     "autoprefixer": "^10.3.7",
     "chai": "^4.3.4",
     "cypress": "^8.6.0",
