--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -46,6 +46,9 @@
       "@heavy-duty/bulldozer/application/features/edit-signer": [
         "libs/bulldozer/application/features/edit-signer/src/index.ts"
       ],
+      "@heavy-duty/bulldozer/application/features/edit-workspace": [
+        "libs/bulldozer/application/features/edit-workspace/src/index.ts"
+      ],
       "@heavy-duty/bulldozer/application/features/navigation": [
         "libs/bulldozer/application/features/navigation/src/index.ts"
       ],
@@ -57,6 +60,9 @@
       ],
       "@heavy-duty/bulldozer/application/features/view-instruction": [
         "libs/bulldozer/application/features/view-instruction/src/index.ts"
+      ],
+      "@heavy-duty/bulldozer/application/features/view-workspace": [
+        "libs/bulldozer/application/features/view-workspace/src/index.ts"
       ],
       "@heavy-duty/bulldozer/application/shell": [
         "libs/bulldozer/application/shell/src/index.ts"
