--- a/nx.json
+++ b/nx.json
@@ -38,13 +38,21 @@
       "e2eTestRunner": "cypress"
     },
     "@nrwl/angular:library": {
-      "style": "scss",
       "linter": "eslint",
-      "unitTestRunner": "jest"
+      "unitTestRunner": "jest",
+      "simpleModuleName": true,
+      "standaloneConfig": true
     },
-    "@nrwl/angular:component": {
-      "style": "scss"
-    }
+    "@nrwl/angular:scam": {
+      "style": "scss",
+      "changeDetection": "OnPush",
+      "flat": true,
+      "inlineStyle": true,
+      "inlineTemplate": true,
+      "skipTests": true,
+      "inlineScam": false
+    },
+    "@nrwl/angular:component": {}
   },
   "defaultProject": "bulldozer-client"
 }
