--- a/package.json
+++ b/package.json
@@ -11,23 +11,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "13.1.0",
-    "@angular/cdk": "13.1.0",
-    "@angular/common": "13.1.0",
-    "@angular/compiler": "13.1.0",
-    "@angular/core": "13.1.0",
-    "@angular/forms": "13.1.0",
-    "@angular/material": "13.1.0",
-    "@angular/platform-browser": "13.1.0",
-    "@angular/platform-browser-dynamic": "13.1.0",
-    "@angular/router": "13.1.0",
+    "@angular/animations": "13.1.3",
+    "@angular/cdk": "13.1.3",
+    "@angular/common": "13.1.3",
+    "@angular/compiler": "13.1.3",
+    "@angular/core": "13.1.3",
+    "@angular/forms": "13.1.3",
+    "@angular/material": "13.1.3",
+    "@angular/platform-browser": "13.1.3",
+    "@angular/platform-browser-dynamic": "13.1.3",
+    "@angular/router": "13.1.3",
     "@ngrx/component": "13.0.2",
     "@ngrx/component-store": "13.0.2",
-    "@nrwl/angular": "13.3.11",
+    "@nrwl/angular": "13.4.6",
     "@project-serum/anchor": "^0.19.0",
-    "@solana/wallet-adapter-base": "^0.8.1",
-    "@solana/wallet-adapter-wallets": "^0.13.0",
-    "@solana/web3.js": "^1.28.0",
+    "@solana/wallet-adapter-base": "^0.9.2",
+    "@solana/wallet-adapter-wallets": "^0.14.2",
+    "@solana/web3.js": "^1.32.0",
     "file-saver": "^2.0.5",
     "handlebars": "^4.7.7",
     "jszip": "^3.7.1",
@@ -39,24 +39,24 @@
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "^13.0.0",
-    "@angular-devkit/build-angular": "13.0.2",
+    "@angular-devkit/build-angular": "13.1.4",
     "@angular-eslint/eslint-plugin": "13.0.1",
     "@angular-eslint/eslint-plugin-template": "13.0.1",
     "@angular-eslint/template-parser": "13.0.1",
-    "@angular/cli": "~13.1.0",
-    "@angular/compiler-cli": "13.1.0",
-    "@angular/language-service": "13.1.0",
+    "@angular/cli": "13.1.4",
+    "@angular/compiler-cli": "13.1.3",
+    "@angular/language-service": "13.1.3",
     "@commitlint/cli": "^13.2.1",
     "@commitlint/config-conventional": "^13.2.0",
     "@danmt/nx-anchor": "0.0.6",
     "@ngneat/tailwind": "^7.0.3",
-    "@nrwl/cli": "13.3.11",
-    "@nrwl/cypress": "13.3.11",
-    "@nrwl/eslint-plugin-nx": "13.3.11",
-    "@nrwl/jest": "13.3.11",
-    "@nrwl/linter": "13.3.11",
-    "@nrwl/tao": "13.3.11",
-    "@nrwl/workspace": "13.3.11",
+    "@nrwl/cli": "13.4.6",
+    "@nrwl/cypress": "13.4.6",
+    "@nrwl/eslint-plugin-nx": "13.4.6",
+    "@nrwl/jest": "13.4.6",
+    "@nrwl/linter": "13.4.6",
+    "@nrwl/tao": "13.4.6",
+    "@nrwl/workspace": "13.4.6",
     "@types/chai": "^4.2.21",
     "@types/file-saver": "^2.0.3",
     "@types/jest": "27.0.2",
@@ -75,7 +75,7 @@
     "jest-preset-angular": "11.0.0-rc.3",
     "lint-staged": "^11.2.3",
     "mocha": "^9.1.3",
-    "ng-packagr": "13.0.3",
+    "ng-packagr": "13.1.3",
     "postcss": "^8.3.9",
     "postcss-import": "^14.0.2",
     "postcss-preset-env": "^6.7.0",
@@ -83,7 +83,7 @@
     "prettier": "^2.3.1",
     "tailwindcss": "^2.2.17",
     "ts-jest": "27.0.5",
-    "typescript": "^4.5.4"
+    "typescript": "4.5.5"
   },
   "husky": {
     "hooks": {
