--- a/libs/shared/wallet-adapter/package.json
+++ b/libs/shared/wallet-adapter/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@heavy-duty/wallet-adapter",
-  "version": "0.2.1",
+  "version": "0.1.0-alpha.1",
   "peerDependencies": {
     "@angular/common": "13.1.0",
     "@angular/core": "13.1.0"
